--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="./styles/global.css" type="text/css">
+    <link rel="stylesheet" href="../src/styles/global.scss" type="text/css">
   </head>
   <body>
     <noscript>
