--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Hacker News</title>
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="../src/styles/global.scss" type="text/css">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but hacker-news doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge"
+        http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1.0"
+        name="viewport">
+  <link href="<%= BASE_URL %>favicon.ico"
+        rel="icon">
+  <title>Hacker News</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
+        rel="stylesheet"
+        type="text/css">
+  <link href="../src/styles/global.scss"
+        rel="stylesheet"
+        type="text/css">
+</head>
+<body>
+  <!--
+      This is a test GitHub branch. This should result in a merge request with lots of changes.
+    -->
+   <noscript><strong>We're sorry but hacker-news doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
+  <div id="app"></div><!-- built files will be auto injected -->
+</body>
 </html>
